package ch.m226.golf;

/**
 * Possible damage types of an attack. This allows an armor to defend from a particular type of damage.
 */
public enum DamageType{
    SLASHING,
    PIERCING,
    FIRE,
    COLD
}
